--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wrapper">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
@@ -37,11 +37,12 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <input class="form-control" id="datetime" type="text" placeholder="1/01/2010">
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="submit" class="btn btn-default btn-lg btn-block">Filter Table</button>
+                  <button id="reset-btn" type="reset" class="btn btn-default btn-lg btn-block">Reset Table</button>
                 </form>
               </div>
             </div>
@@ -67,7 +68,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer" style="text-align: center;">
       <span class="bottom">UFO Sightings</span>
     </footer>
   </div>
