--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">UFO Sightings
@@ -60,8 +60,8 @@
                                     </div>
                                     <button id="filter-btn" type="button"
                                         class="btn btn-default btn-lg btn-block">Filter Table</button>
-                                    <button id="reset-btn" type="reset" class="btn btn-default btn-lg btn-block">Reset
-                                        Table</button>
+                                    <!--<button id="reset-btn" type="reset" class="btn btn-default btn-lg btn-block">Reset
+                                        Table</button>-->
                                 </form>
                             </div>
                         </div>
